Reinitialize jmockit for all tests